EKS-production-with-tf/jenkins-infra/ec2.tf
resource "aws_key_pair" "my-key" {
  key_name   = "${var.env}-key"
  public_key = file("terra-key-ec2.pub")


  tags = {
    Environment = var.env

  }

}

resource "aws_vpc" "default" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "automate-vpcTF"
  }

}


resource "aws_subnet" "default" {
  vpc_id                  = aws_vpc.default.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "terraform-subnet"
  }

}

resource "aws_internet_gateway" "ig1" {
  vpc_id = aws_vpc.default.id
  tags = {
    Name = "automate-igwTF"
  }
}


resource "aws_route_table" "rt1" {
  vpc_id = aws_vpc.default.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ig1.id
  }
  tags = {
    Name = "public-route-table"
  }
}


resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.default.id
  route_table_id = aws_route_table.rt1.id
}



resource "aws_security_group" "my_sg" {
  name        = "automate-sg"
  description = "this is automated Sg generated by TF for EC2 instance"
  vpc_id      = aws_vpc.default.id



  ingress {
    description = "allow port for jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    description = "Allow HTTP ACCESS"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH ACCESS "
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "automate-sg-TF"
  }
}


resource "aws_instance" "my-instance" {

  instance_type          = var.instance_type
  key_name               = aws_key_pair.my-key.key_name
  subnet_id              = aws_subnet.default.id
  vpc_security_group_ids = [aws_security_group.my_sg.id]
  ami                    = var.ec2_ami_id
  user_data              = file("jenkins_install.sh")
  root_block_device {
    volume_size = var.env == "prod" ? 15 : var.ec2_default_root_storage_size
    volume_type = var.ec2_root_storage_type
  }
  tags = {
    Name        = "Jenkins-server"
    Environment = var.env
  }
}
